CIT-90: Fixed auth login flicker when resuming connection on private pages

--- a/cit3.0-web/src/App.css
+++ b/cit3.0-web/src/App.css
@@ -14,6 +14,17 @@ main {
   flex: 1;
 }
 
+.center-spinner {
+  position: relative;
+}
+
+.center-spinner .spinner-border {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #244278;
+}
+
 .invest-container {
   height: 80vh;
 }
